@@ -17,8 +17,22 @@
 
 package org.openqa.selenium.firefox;
 
+import static org.openqa.selenium.remote.Browser.FIREFOX;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.SimpleFileVisitor;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.util.Base64;
+import java.util.Map;
+import java.util.function.Predicate;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.InvalidArgumentException;
 import org.openqa.selenium.internal.Require;
@@ -28,24 +42,19 @@ import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Base64;
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.remote.Browser.FIREFOX;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasExtensions implements AugmenterProvider<HasExtensions>, AdditionalHttpCommands {
 
   public static final String INSTALL_EXTENSION = "installExtension";
   public static final String UNINSTALL_EXTENSION = "uninstallExtension";
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    INSTALL_EXTENSION, new CommandInfo("/session/:sessionId/moz/addon/install", HttpMethod.POST),
-    UNINSTALL_EXTENSION, new CommandInfo("/session/:sessionId/moz/addon/uninstall", HttpMethod.POST));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(
+          INSTALL_EXTENSION,
+              new CommandInfo("/session/:sessionId/moz/addon/install", HttpMethod.POST),
+          UNINSTALL_EXTENSION,
+              new CommandInfo("/session/:sessionId/moz/addon/uninstall", HttpMethod.POST));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
@@ -77,21 +86,44 @@ public class AddHasExtensions implements AugmenterProvider<HasExtensions>, Addit
 
         String encoded;
         try {
-          encoded = Base64.getEncoder().encodeToString(Files.readAllBytes(path));
+          if (Files.isDirectory(path)) {
+            encoded = Base64.getEncoder().encodeToString(Files.readAllBytes(zipDirectory(path)));
+          } else {
+            encoded = Base64.getEncoder().encodeToString(Files.readAllBytes(path));
+          }
         } catch (IOException e) {
           throw new InvalidArgumentException(path + " is an invalid path", e);
         }
 
-        return (String) executeMethod.execute(
-          INSTALL_EXTENSION,
-          ImmutableMap.of("addon", encoded, "temporary", temporary));
+        return (String)
+            executeMethod.execute(
+                INSTALL_EXTENSION, Map.of("addon", encoded, "temporary", temporary));
+      }
+
+      private Path zipDirectory(Path path) throws IOException {
+        Path extZip = Paths.get(path.getFileName().toString() + ".zip");
+        try (ZipOutputStream zos = new ZipOutputStream(new FileOutputStream(extZip.toFile()))) {
+          Files.walkFileTree(
+              path,
+              new SimpleFileVisitor<Path>() {
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
+                    throws IOException {
+                  zos.putNextEntry(new ZipEntry(path.relativize(file).toString()));
+                  Files.copy(file, zos);
+                  zos.closeEntry();
+                  return FileVisitResult.CONTINUE;
+                }
+              });
+        }
+        return extZip;
       }
 
       @Override
       public void uninstallExtension(String extensionId) {
         Require.nonNull("Extension ID", extensionId);
 
-        executeMethod.execute(UNINSTALL_EXTENSION, ImmutableMap.of("id", extensionId));
+        executeMethod.execute(UNINSTALL_EXTENSION, Map.of("id", extensionId));
       }
     };
   }
